[gd_scene load_steps=5 format=3 uid="uid://dy3sg7jdgo4ut"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_35ron"]
[ext_resource type="Script" path="res://bul.gd" id="1_uivr5"]

[sub_resource type="Theme" id="Theme_nt8k0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nu021"]
bg_color = Color(0.929412, 0.929412, 0, 1)

[node name="mainmenu" type="Node2D"]
script = ExtResource("1_35ron")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 261.0
offset_top = 84.0
offset_right = 866.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "BULLET BUN"

[node name="play" type="Button" parent="."]
offset_left = 438.0
offset_top = 280.0
offset_right = 686.0
offset_bottom = 373.0
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="leaderboard" type="Button" parent="."]
offset_left = 438.0
offset_top = 384.0
offset_right = 686.0
offset_bottom = 477.0
theme_override_font_sizes/font_size = 30
text = "LEADERBOARD"

[node name="quit" type="Button" parent="."]
offset_left = 438.0
offset_top = 486.0
offset_right = 686.0
offset_bottom = 579.0
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="bul" type="Panel" parent="."]
offset_left = 937.0
offset_top = 97.0
offset_right = 969.0
offset_bottom = 216.0
pivot_offset = Vector2(16, 59.5)
theme = SubResource("Theme_nt8k0")
theme_override_styles/panel = SubResource("StyleBoxFlat_nu021")
script = ExtResource("1_uivr5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="bul" method="_on_timer_timeout"]
